--- a/ex22.md
+++ b/ex22.md
@@ -1,1 +1,1 @@
-
+There won’t be any code in this exercise, just revise what you have in past exercises and try to memorize different sysmbols you have encountered so far.
