--- a/ex22.md
+++ b/ex22.md
@@ -1,1 +1,3 @@
-There won’t be any code in this exercise, just revise what you have in past exercises and try to memorize different sysmbols you have encountered so far.
+There won’t be any code in this exercise, just revise what you have done so far. Try to memorize as many symbols encountered until now, along with their meaning.
+
+All the best!
